<resources>
    <string name="app_name">Gatotkaca</string>
    <string name="api_error">Error</string>
    <string name="database_error">Error</string>
    <string name="everything">All News</string>
    <string name="everything_details">All News Details</string>
    <string name="top">Top News</string>
    <string name="top_details">Top News Details</string>
    <string name="favorite">Favorite News</string>
    <string name="favorite_details">Favorite News Details</string>
    <string name="news_image">Image</string>
    <string name="news_favorite">Favorite</string>
    <string name="news_title">Title</string>
    <string name="news_description">Description</string>
    <string name="news_search">Search</string>
    <string name="news_top">#1</string>
    <string name="news_author">Author</string>
    <string name="news_source">Source</string>
    <string name="news_published">Published at</string>
</resources>