<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
    app:cardCornerRadius="20dp"
    tools:context=".activity.FavoriteDetailFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:icon="@drawable/close_icon"
                    android:background="@drawable/close_layout"
                    android:text="@string/favorite_details"/>
                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/news_image"
                    android:src="@drawable/header"/>
                <ToggleButton
                    android:id="@+id/tb_favorite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/news_favorite"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/favorite_toggle"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@id/iv_image"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/news_title"/>
                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:text="@string/news_description"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/ly_authorSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            app:layout_constraintBottom_toTopOf="@id/tv_published"
            android:background="@color/schotersPalette4"
            android:baselineAligned="false"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="1dp"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/news_author"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="1dp"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:gravity="center"
                    android:text="@string/news_source"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10dp"
            android:gravity="center"
            android:background="@color/white"
            android:text="@string/news_published"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>