<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/iv_newsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/news_image"
                android:src="@drawable/logo"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_newsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/news_title"/>
            <TextView
                android:id="@+id/tv_newsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="5"
                android:textSize="12sp"
                android:text="@string/news_description"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>