<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:theme="@style/ThemeFavorite"
    android:orientation="vertical"
    tools:context=".activity.SearchActivity">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/favorite_icon"
        android:background="@drawable/search_button_layout"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/news_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/schotersPalette1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>
        <EditText
            android:id="@+id/et_newsSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/search_view_layout"
            android:inputType="text"
            android:autofillHints="Berita"
            android:textSize="16sp"
            android:hint="@string/news_search"/>
        <Button
            android:id="@+id/btn_newsSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="120dp"
            android:paddingEnd="120dp"
            android:background="@drawable/search_button_layout"
            android:drawableStart="@drawable/search_view_icon"
            android:textColor="@color/white"
            android:text="@string/news_search"/>
    </LinearLayout>
</LinearLayout>